--- a/home/templates/home/initial_feedback.html
+++ b/home/templates/home/initial_feedback.html
@@ -10,32 +10,46 @@ Initial Feedback for {{ current_round.official_name }}
 	{% with interns=current_round.get_approved_intern_selections %}
 		{% for i in interns %}
 			<h2>{{ i.community_name }} - {{ i.intern_name }}</h2>
+			<hr>
 
-			{% if i.initialmentorfeedback %}
-			{% endif %}
-			{% if i.initialinternfeedback %}
-			{% endif %}
-			<table class="table table-striped table-bordered">
-				{% with initial_mentor_status=i.get_mentor_initial_feedback_status initial_intern_status=i.get_intern_initial_feedback_status %}
-				<thread class="thread-dark">
-				<tr>
-					<th scope="col" class="col-md-1">Feedback from mentor:</th>
-					<th scope="col" class="col-md-1">Feedback from intern:</th>
-					<th scope="col" class="col-md-3">Description</th>
-				</tr>
-				</thread>
-				<tr>
-					<td>
-						{% include 'home/snippet/mentor-feedback-status.html' with intern=i mentor_status=initial_mentor_status extension_date=i.initialmentorfeedback.extension_date %}
-					</td>
-					<td>
-						{% include 'home/snippet/intern-feedback-status.html' with intern=i intern_status=initial_intern_status %}
-					</td>
-					<td>Feedback status</td>
-				</tr>
-				{% if initial_mentor_status == i.TERMINATE %}<tr><td colspan="3">Mentor wishes to terminate internship</td></tr>{% endif %}
-				{% if initial_mentor_status != i.MISSING or initial_intern_status != i.MISSING %}
-					<tr><td colspan="3"><b>Mentor support</b></td></tr>
+			{% with initial_mentor_status=i.get_mentor_initial_feedback_status initial_intern_status=i.get_intern_initial_feedback_status %}
+				{% if initial_mentor_status == i.PAY or initial_mentor_status == i.PAID %}
+					<div class="container my-4 border border-success rounded">
+				{% elif not initial_mentor_status %}
+					<div class="container my-4 border border-secondary rounded">
+				{% elif initial_mentor_status == i.TERMINATE or initial_mentor_status == i.TERMINATE %}
+					<div class="container my-4 border border-danger rounded">
+				{% else %}
+					<div class="container my-4 border border-warning rounded">
+				{% endif %}
+					<div class="row align-items-center mt-3">
+						<div class="col">
+							<p>Action to take:</p>
+						</div>
+						<div class="col-2">
+							<p>{% include 'home/snippet/mentor-feedback-status.html' with intern=i mentor_status=initial_mentor_status extension_date=i.initialmentorfeedback.extension_date %}</p>
+						</div>
+						<div class="col-8">
+							<p>{{ i.initialmentorfeedback.get_actions_requested_display }}</p>
+						</div>
+					</div>
+				</div>
+				<table class="table table-striped table-bordered">
+					<tr>
+						<td colspan="3"><b>Mentor support</b></td>
+					</tr>
+					<thread class="thread-dark">
+					<tr>
+						<th scope="col" class="col-md-1">Feedback from mentor:</th>
+						<th scope="col" class="col-md-1">Feedback from intern:</th>
+						<th scope="col" class="col-md-3"></th>
+					</tr>
+					</thread>
+					<tr>
+						<td>Mentors - {{ i.community_name }}</td>
+						<td>Intern - {{ i.intern_name }}</td>
+						<td></td>
+					</tr>
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.provided_onboarding %}<button class="btn btn-success">Resources provided</button>{% else %}<button class="btn btn-warning">No resources provided</button>{% endif %}{% endif %}</td>
 						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.provided_onboarding %}<button class="btn btn-success">Resources provided</button>{% else %}<button class="btn btn-warning">No resources provided</button>{% endif %}{% endif %}</td>
@@ -56,8 +70,8 @@ Initial Feedback for {{ current_round.official_name }}
 					<tr><td colspan="3"><b>Intern progress</b></td></tr>
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.in_contact %}<button class="btn btn-success">In contact</button></td>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% else %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.in_contact %}<button class="btn btn-success">In contact</button>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% endif %}</td>
-						<td>Is intern in contact with their mentor to discuss how to approach their first tasks?</td>
+					<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.in_contact %}<button class="btn btn-success">In contact</button>{% else %}<button class="btn btn-warning">Not in contact</button>{% endif %}{% endif %}</td>
+					<td>Is intern in contact with their mentor to discuss how to approach their first tasks?</td>
 					</tr>
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.asking_questions %}<button class="btn btn-success">Asking questions</button>{% else %}<button class="btn btn-warning">Not asking questions</button>{% endif %}{% endif %}</td>
@@ -76,7 +90,7 @@ Initial Feedback for {{ current_round.official_name }}
 					</tr>
 					<tr>
 						<td>{% if i.initialmentorfeedback %}{% if i.initialmentorfeedback.full_time_effort %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}{% endif %}</td>
-						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_40 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_50 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_60 %}<button class="btn btn-success">Full-time effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.initialinternfeedback.get_hours_worked_display }} per week{% endif %}</td>
+						<td>{% if i.initialinternfeedback %}{% if i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_40 %}<button class="btn btn-success">Full-time effort</button>{% elif i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_50 or i.initialinternfeedback.hours_worked == i.initialinternfeedback.HOURS_60 %}<button class="btn btn-warning">Overtime effort</button>{% else %}<button class="btn btn-danger">Not a full-time effort</button>{% endif %}<br>{{ i.initialinternfeedback.get_hours_worked_display }} per week{% endif %}</td>
 						<td>Is the intern putting in a full-time effort?</td>
 					</tr>
 					{% if i.initialinternfeedback.time_comments %}<tr><td colspan="3"><p>Intern's comments on their time commitments:</p><p>{{ i.initialinternfeedback.time_comments }}</p></td></tr>{% endif %}
@@ -92,7 +106,6 @@ Initial Feedback for {{ current_round.official_name }}
 					</tr>
 					{% if i.initialmentorfeedback %}<tr><td colspan="3"><p>Mentor's report on the intern's progress:</p><p>{{ i.initialmentorfeedback.progress_report }}</p></td></tr>{% endif %}
 					{% if i.initialinternfeedback %}<tr><td colspan="3"><p>Intern's report on their own progress:</p><p>{{ i.initialinternfeedback.progress_report }}</p></td></tr>{% endif %}
-				{% endif %}
 				{% endwith %}
 			</table>
 		{% endfor %}
