Docs: Make new Blogging FAQ section

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -18,6 +18,7 @@ Internship Guide | Outreachy Documentation
 <a href='#career-development'>Career Development</a><br>
 <a href='#payments'>Payments</a><br>
 <a href='#blog'>Blogging</a><br>
+<a href='#blogging-faq'>Blogging FAQ</a><br>
 <a href='#chats'>Chats with interns, mentors, and alums</a>
 </p>
 
@@ -148,6 +149,11 @@ Internship Guide | Outreachy Documentation
 		</table>
 	{% endwith %}
 {% endif %}
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h2 id="blogging-faq">Blogging FAQ</h2>
 
 <h3>Where should I create a blog?</h3>
 
