Docs: Turn table of contents into ordered list

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -12,15 +12,15 @@ Internship Guide | Outreachy Documentation
 
 <h2 id='toc'>Table of Contents</h2>
 
-<p>
-<a href='#time-commitment'>Internship Time Commitment</a><br>
-<a href='#mentor-expectations'>Mentor Expectations</a><br>
-<a href='#career-development'>Career Development</a><br>
-<a href='#payments'>Payments</a><br>
-<a href='#blog'>Blogging</a><br>
-<a href='#blogging-faq'>Blogging FAQ</a><br>
-<a href='#chats'>Chats with interns, mentors, and alums</a>
-</p>
+<ol>
+	<li><a href='#time-commitment'>Internship Time Commitment</a></li>
+	<li><a href='#mentor-expectations'>Mentor Expectations</a></li>
+	<li><a href='#career-development'>Career Development</a></li>
+	<li><a href='#payments'>Payments</a></li>
+	<li><a href='#blog'>Blogging</a></li>
+	<li><a href='#blogging-faq'>Blogging FAQ</a></li>
+	<li><a href='#chats'>Chats with interns, mentors, and alums</a>
+</ol>
 
 <hr>
 <h2 id='time-commitment'><a href='#time-commitment'>Internship Time Commitment</a></h2>
