Docs: Add anchor tag for blog post length FAQ
We want to be able to link to specific sections of the documentation.
Being able to link to the recommended blog post length from each blog
prompt section will be helpful.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -169,7 +169,7 @@ Internship Guide | Outreachy Documentation
 
 <p>Blog posts don't need to be perfect! You shouldn't spend more than 1-3 hours on the post. Your mid-point and final project progress blog post may take longer than your other blog posts. Blogging shouldn't take priority over working on your internship project.</p>
 
-<h3>How much should I write?</h3>
+<h3 id="blog-length">How much should I write?</h3>
 
 <p>A good rule of thumb is that blog posts should take about 3 to 5 minutes to read. If it takes longer than that, you may want to break up it up into multiple blog posts.</p>
 
