--- a/outreachyhome/templates/sass/application.scss
+++ b/outreachyhome/templates/sass/application.scss
@@ -9,6 +9,19 @@ body {
   white-space: pre-wrap;
 }
 
+h1 {
+    font-size: 2.8rem;
+}
+
+h2 {
+    font-size: 2.2rem;
+    padding-top: 10px;
+}
+
+h3 {
+    font-size: 1.7rem;
+    padding-top: 10px;
+}
 // Django automatically applies a 'helptext' class in forms;
 // Bootstrap wants us to use other classes instead; so we
 // let SCSS wire one to the other.
