Docs: Add minimal section on what makes a good internship project

--- a/home/templates/home/docs/community_guide.html
+++ b/home/templates/home/docs/community_guide.html
@@ -23,6 +23,7 @@ Community Guide | Outreachy Documentation
 		</ul>
 	</li>
 	<li><a href='#participation-rules'>Community participation rules</a></li>
+	<li><a href='#project-guidelines'>Internship project guidelines</a></li>
 	<li><a href='#outreachy-schedule'>Outreachy schedule</a>
 		<ul>
 			<li><a href='#cfp-period'>Communities and projects sign up period</a></li>
@@ -131,7 +132,20 @@ Community Guide | Outreachy Documentation
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <hr>
 
-<h2 id='outreachy-schedule'><a href='#outreachy-schedule'>3. Outreachy yearly schedule</a></h2>
+<h2 id='project-guidelines'><a href='#project-guidelines'>3. Internship project guidelines</a></h2>
+
+<p>What makes a good Outreachy internship project? (Credit to QEMU coordinator Stefan Hajnoczi's <a href="https://www.youtube.com/watch?v=xNVCX7YMUL8">talk at KVM Forum</a> for these tips.) A project that is suitable for interns to work on is:</p>
+<ul>
+	<li><b>Well-defined</b> - The project has a well defined scope.</li>
+	<li><b>Self-contained</b> - Has few dependencies on uncompleted work. Does not require interacting with multiple open source communities who are not on-board with interacting with an Outreachy intern.</li>
+	<li><b>Uncontroversial</b> - The community should agree that this project idea is acceptable (and ideally useful!) to be included in the community project.</li>
+	<li><b>Incremental</b> - The project should produce several deliverables during the internship period, rather than having only one large deliverable. This allows the project goals to be modified if the intern completes task faster or slower than expected. If the project does have one large deliverable, it's recommended that the intern complete a design document. This allows the intern to hand off unfinished work to the next intern, or the community.</li>
+</ul>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<hr>
+
+<h2 id='outreachy-schedule'><a href='#outreachy-schedule'>4. Outreachy yearly schedule</a></h2>
 
 <p>Outreachy internships run twice a year. Here is our general schedule for each year:</p>
 
